tests/snapshots/typeck__fail_self_field-ast.snap
---
source: tests/typeck.rs
description: "class Main {\n    self : SELF_TYPE <- new SELF_TYPE;\n\n    main(): Object {\n        0\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: true,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Field(Field(Binding(
          name: Name(Spanned(
            value: "self",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 20,
                line: 2,
                col: 8,
              ),
            ),
          )),
          ty_name: TyName(Name(Spanned(
            value: "SELF_TYPE",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 24,
                line: 2,
                col: 12,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 32,
                line: 2,
                col: 20,
              ),
            ),
          ))),
          init: Some(New(New(
            ty_name: TyName(Name(Spanned(
              value: "SELF_TYPE",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 41,
                  line: 2,
                  col: 29,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 49,
                  line: 2,
                  col: 37,
                ),
              ),
            ))),
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 37,
                line: 2,
                col: 25,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 39,
                line: 2,
                col: 27,
              ),
            ),
            ty: Resolved(SelfType(
              enclosed: Class("Main"),
            )),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 20,
              line: 2,
              col: 8,
            ),
          ),
          ty: Resolved(SelfType(
            enclosed: Class("Main"),
          )),
        ))),
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 57,
                line: 4,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 60,
                line: 4,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 65,
                line: 4,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 70,
                line: 4,
                col: 18,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 0,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 82,
                line: 5,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 82,
                line: 5,
                col: 9,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 57,
              line: 4,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 60,
              line: 4,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Object),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
