tests/snapshots/typeck__pass_coexisting_field_method_names-ast.snap
---
source: tests/typeck.rs
description: "class Main {\n    x : Int <- 42;\n\n    x(): Int {\n        x\n    };\n\n    main(): Object {\n        x()\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: false,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Field(Field(Binding(
          name: Name(Spanned(
            value: "x",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
            ),
          )),
          binding_id: Some(BindingId(2)),
          ty_name: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 21,
                line: 2,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 23,
                line: 2,
                col: 11,
              ),
            ),
          ))),
          init: Some(Int(IntLit(Spanned(
            value: 42,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 28,
                line: 2,
                col: 16,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 29,
                line: 2,
                col: 17,
              ),
            ),
          )))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
          ),
          ty: Resolved(Builtin(Int)),
        ))),
        Method(Method(
          name: Name(Spanned(
            value: "x",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 37,
                line: 4,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 37,
                line: 4,
                col: 5,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 42,
                line: 4,
                col: 10,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 44,
                line: 4,
                col: 12,
              ),
            ),
          ))),
          body: Name(NameExpr(
            name: Name(Spanned(
              value: "x",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 56,
                  line: 5,
                  col: 9,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 56,
                  line: 5,
                  col: 9,
                ),
              ),
            )),
            binding_id: Some(BindingId(2)),
            ty: Some(Resolved(Builtin(Int))),
          )),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 37,
              line: 4,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 37,
              line: 4,
              col: 5,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Int),
          ))),
        )),
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 70,
                line: 8,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 73,
                line: 8,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 78,
                line: 8,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 83,
                line: 8,
                col: 18,
              ),
            ),
          ))),
          body: Call(Call(
            receiver: SelfType(
              ty: Resolved(SelfType(
                enclosed: Class("Main"),
              )),
              method_name_span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 95,
                  line: 9,
                  col: 9,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 95,
                  line: 9,
                  col: 9,
                ),
              ),
              binding_id: Some(BindingId(1)),
            ),
            method: Name(Spanned(
              value: "x",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 95,
                  line: 9,
                  col: 9,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 95,
                  line: 9,
                  col: 9,
                ),
              ),
            )),
            args: [],
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 95,
                line: 9,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 95,
                line: 9,
                col: 9,
              ),
            ),
            ty: Some(Resolved(Builtin(Int))),
          )),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 70,
              line: 8,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 73,
              line: 8,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Object),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
