tests/snapshots/typeck__pass_override-ast.snap
---
source: tests/typeck.rs
description: "class Base {\n    test(x : Int, y : Base): String {\n        \"hello world\"\n    };\n};\n\nclass Derived {\n    test(y : Int, x : Base): String {\n        \"mic test\"\n    };\n};\n\nclass Main inherits Derived {\n    main(): Object {\n        0\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: false,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "test",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 20,
                line: 2,
                col: 8,
              ),
            ),
          )),
          params: [
            Formal(
              name: Name(Spanned(
                value: "x",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 22,
                    line: 2,
                    col: 10,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 22,
                    line: 2,
                    col: 10,
                  ),
                ),
              )),
              ty_name: TyName(Name(Spanned(
                value: "Int",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 26,
                    line: 2,
                    col: 14,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 28,
                    line: 2,
                    col: 16,
                  ),
                ),
              ))),
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 22,
                  line: 2,
                  col: 10,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 22,
                  line: 2,
                  col: 10,
                ),
              ),
              ty: Resolved(Builtin(Int)),
            ),
            Formal(
              name: Name(Spanned(
                value: "y",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 31,
                    line: 2,
                    col: 19,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 31,
                    line: 2,
                    col: 19,
                  ),
                ),
              )),
              ty_name: TyName(Name(Spanned(
                value: "Base",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 35,
                    line: 2,
                    col: 23,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 38,
                    line: 2,
                    col: 26,
                  ),
                ),
              ))),
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 31,
                  line: 2,
                  col: 19,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 31,
                  line: 2,
                  col: 19,
                ),
              ),
              ty: Resolved(Class("Base")),
            ),
          ],
          return_ty: TyName(Name(Spanned(
            value: "String",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 42,
                line: 2,
                col: 30,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 47,
                line: 2,
                col: 35,
              ),
            ),
          ))),
          body: String(StringLit(Spanned(
            value: "hello world",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 59,
                line: 3,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 71,
                line: 3,
                col: 21,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 20,
              line: 2,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [
              Builtin(Int),
              Class("Base"),
            ],
            ret: Builtin(String),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Base")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Derived",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 90,
            line: 7,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 96,
            line: 7,
            col: 13,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "test",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 104,
                line: 8,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 107,
                line: 8,
                col: 8,
              ),
            ),
          )),
          params: [
            Formal(
              name: Name(Spanned(
                value: "y",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 109,
                    line: 8,
                    col: 10,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 109,
                    line: 8,
                    col: 10,
                  ),
                ),
              )),
              ty_name: TyName(Name(Spanned(
                value: "Int",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 113,
                    line: 8,
                    col: 14,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 115,
                    line: 8,
                    col: 16,
                  ),
                ),
              ))),
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 109,
                  line: 8,
                  col: 10,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 109,
                  line: 8,
                  col: 10,
                ),
              ),
              ty: Resolved(Builtin(Int)),
            ),
            Formal(
              name: Name(Spanned(
                value: "x",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 118,
                    line: 8,
                    col: 19,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 118,
                    line: 8,
                    col: 19,
                  ),
                ),
              )),
              ty_name: TyName(Name(Spanned(
                value: "Base",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 122,
                    line: 8,
                    col: 23,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 125,
                    line: 8,
                    col: 26,
                  ),
                ),
              ))),
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 118,
                  line: 8,
                  col: 19,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 118,
                  line: 8,
                  col: 19,
                ),
              ),
              ty: Resolved(Class("Base")),
            ),
          ],
          return_ty: TyName(Name(Spanned(
            value: "String",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 129,
                line: 8,
                col: 30,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 134,
                line: 8,
                col: 35,
              ),
            ),
          ))),
          body: String(StringLit(Spanned(
            value: "mic test",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 146,
                line: 9,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 155,
                line: 9,
                col: 18,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 104,
              line: 8,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 107,
              line: 8,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [
              Builtin(Int),
              Class("Base"),
            ],
            ret: Builtin(String),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 84,
          line: 7,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 88,
          line: 7,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Derived")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 174,
            line: 13,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 177,
            line: 13,
            col: 10,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "Derived",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 188,
            line: 13,
            col: 21,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 194,
            line: 13,
            col: 27,
          ),
        ),
      )))),
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 202,
                line: 14,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 205,
                line: 14,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 210,
                line: 14,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 215,
                line: 14,
                col: 18,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 0,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 227,
                line: 15,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 227,
                line: 15,
                col: 9,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 202,
              line: 14,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 205,
              line: 14,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Object),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 168,
          line: 13,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 172,
          line: 13,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
